<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/id_ly_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_image_list"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:contentDescription="@string/img_todo"
            android:src="@drawable/avatar_3d" />

        <TextView
            android:id="@+id/id_project_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/porject_date"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_ly_02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/id_project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/txt_name_project" />

        <TextView
            android:id="@+id/id_project_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txt_project_type"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/id_project_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txt_project_status"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/id_project_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txt_url_project"
            android:textSize="12dp" />

        <LinearLayout
            android:id="@+id/id_ly_project_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_project_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txt_project_desc"
                android:textSize="10dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>