<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_image_hajj"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/img_todo" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/id_image_hajj_close"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="right"
            android:layout_marginTop="-30dp"
            android:src="@drawable/avatar_3d"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="2dp"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_txt_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txt_name_project"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/id_txt_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txt_project_desc"
                android:textSize="12sp" />

            <RelativeLayout
                android:id="@+id/id_lr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/id_depart_arival"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Berangkat: 2018/09/16, Pulang : 20180924"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/id_qty_hajji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/id_depart_arival"
                    android:hint="Qty : 80"
                    android:textSize="10sp" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>